# geanypy3

./: .gitignore  autogen.sh  configure.ac
lib/: Makefile.am  geanypy.c  geanypy.h  geanypy.m4  geanypy.pc.in
tools/: Makefile.am  cleantree.sh  geanypy-genplugin.in
tools/template/: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  plugin.c  plugin.py
